[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=1.3.0"]
build-backend = "maturin"

[project]
name = "wav-decoder"
version = "0.1.0"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "polars>=1.8.2",
]

[tool.maturin]
module-name = "wav_decoder._internal"

[[tool.mypy.overrides]]
module = "polars.utils.udfs"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "maturin>=1.8.1",
    "pytest>=8.3.4",
    "ruff>=0.8.6",
    "soundfile>=0.13.0",
]
